Fix styles. Add container to align elements of page

--- a/components/container/container.css
+++ b/components/container/container.css
@@ -2,3 +2,13 @@
     max-width: 1110px;
     margin: 0 auto;
 }
+
+.container_centered-text {
+    text-align: center;
+}
+
+.container_main-grid {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-column-gap: 56px;
+}
