--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -26,15 +26,9 @@
     padding-top: 32px;
 }
 
-.footer__inner {
-    margin: 0 auto;
-    max-width: 640px;
-}
-
 .footer_template {
     background-color: transparent;
     padding: 56px 0 56px;
-    margin: 0 auto;
 }
 
 .footer__label {
