--- a/components/header/header.css
+++ b/components/header/header.css
@@ -14,7 +14,6 @@
 }
 
 .header_template {
-    height: 34px;
     padding: 24px 0 60px 0;
     background-color: transparent;
 }
